Fix issue the keyboard could get stuck when entering card details
closes #419

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -658,7 +658,7 @@ $loader-scale-duration: 300ms;
           border-color: $black-40;
         }
 
-        input {
+        input.braintree-form__raw-input {
           border:none;
           background-image:none;
           background-color:transparent;
